--- a/first_html_css.html
+++ b/first_html_css.html
@@ -15,18 +15,44 @@
             color:red; 
             text-decoration: underline
         }
+        h1 {
+            font-size: 45px;
+            text-align: center;
+            border-bottom: 3px solid #000;
+            padding: 20px;
+            margin: 0;
+        }
+        ol {
+            border-right: 3px solid #000;
+            width: 100px;
+            margin:0;
+            padding: 20px;
+        }
+        #grid {
+            display: grid;
+            grid-template-columns: 150px 1fr;
+        }
+        #grid ol {
+            padding-left: 33px;
+        }
+        #grid #article {
+            padding-left: 25px;
+        }
     </style>
 </head>
 <body>
     <h1><a href="first_html_web.html">WEB</a></h1>
+    <div id="grid">
     <ol>
         <li><a href="first_html.html">HTML</a></li>
         <li><a href="first_html_css.html" 
             id="active">CSS</a></li>
         <li><a href="first_html_js.html">JavaScript</a></li>
     </ol>
+    <div id="article">
     <h2>CSS</h2>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/180px-CSS3_logo_and_wordmark.svg.png" alt="CSS">
     <p><strong> Cascading Style Sheets (CSS)></strong> is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.</p>
-    
+</div>
+</div>
 </body>
