--- a/first_html_js.html
+++ b/first_html_js.html
@@ -2,43 +2,7 @@
 <head>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
-    <style>
-        a{
-            color:black;
-            text-decoration: none;
-        }
-        h1 {
-            font-style: 45px;
-            text-align: center;
-        }
-        #active {
-            color:red; 
-            text-decoration: underline
-        }
-        h1 {
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 3px solid #000;
-            padding: 20px;
-            margin: 0;
-        }
-        ol {
-            border-right: 3px solid #000;
-            width: 100px;
-            margin:0;
-            padding: 20px;
-        }
-        #grid {
-            display: grid;
-            grid-template-columns: 150px 1fr;
-        }
-        #grid ol {
-            padding-left: 33px;
-        }
-        #grid #article {
-            padding-left: 25px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="first_html_web.html">WEB</a></h1>
