--- a/first_html_js.html
+++ b/first_html_js.html
@@ -3,9 +3,13 @@
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script src="colors.js"></script>
 </head>
 <body>
     <h1><a href="first_html_web.html">WEB</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+        nightDayHandler(this);
+    ">
     <div id="grid">
     <ol>
         <li><a href="first_html.html">HTML</a></li>
